--- a/.github/workflows/make-epub.yml
+++ b/.github/workflows/make-epub.yml
@@ -16,7 +16,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: zip -r hanshu.epub META-INF mimetype OEBPS
+        run: |
+          zip -r hanshu.epub META-INF mimetype OEBPS
+          sed -i 's/horizontal-tb/vertical-rl/g' OEBPS/Styles/*.css
+          sed -i 's/page-progression-direction="ltr"/page-progression-direction="rtl"/g' OEBPS/content.opf
+          zip -r hanshu-vst.epub META-INF mimetype OEBPS
+
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
@@ -32,3 +37,10 @@ jobs:
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
           args: copyto hanshu.epub gdrive:/Ancient-China-Books/漢書.epub
+      - name: Sync vst to Google drive
+        uses: wei/rclone@v1
+        env:
+         RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
+         RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
+        with:
+          args: copyto hanshu-vst.epub gdrive:/Ancient-China-Books/漢書-豎排.epub
