--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,10 @@ make-epub:
   script:
     - apt update -y && apt install zip -y
     - zip -r 漢書.epub META-INF mimetype OEBPS
+    - sed -i 's/horizontal-tb/vertical-rl/g' OEBPS/Styles/*.css
+    - sed -i 's/page-progression-direction="ltr"/page-progression-direction="rtl"/g' OEBPS/content.opf
+    - zip -r 漢書-豎排.epub META-INF mimetype OEBPS
+
   artifacts:
     paths:
     - ./*.epub
