添加轉存到 freemdict

--- a/.github/workflows/make-epub.yml
+++ b/.github/workflows/make-epub.yml
@@ -44,3 +44,17 @@ jobs:
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
           args: copyto hanshu-vst.epub gdrive:/Ancient-China-Books/漢書-豎排.epub
+      - name: Sync to Freemdict
+        uses: wei/rclone@v1
+        env:
+         RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
+         RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
+        with:
+          args: copyto hanshu.epub freemdict:/Ancient-China-Books/漢書.epub
+      - name: Sync vst to Freemdict
+        uses: wei/rclone@v1
+        env:
+         RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
+         RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
+        with:
+          args: copyto hanshu-vst.epub freemdict:/Ancient-China-Books/漢書-豎排.epub
