--- a/.github/workflows/make-epub.yml
+++ b/.github/workflows/make-epub.yml
@@ -36,25 +36,25 @@ jobs:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto hanshu.epub gdrive:/Ancient-China-Books/漢書.epub
+          args: copyto hanshu.epub gdrive:/古籍共享电子书计划/漢書.epub
       - name: Sync vst to Google drive
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto hanshu-vst.epub gdrive:/Ancient-China-Books/漢書-豎排.epub
+          args: copyto hanshu-vst.epub gdrive:/古籍共享电子书计划/漢書-豎排.epub
       - name: Sync to Freemdict
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto hanshu.epub freemdict:/Ancient-China-Books/漢書.epub
+          args: copyto hanshu.epub freemdict:/古籍共享电子书计划/漢書.epub
       - name: Sync vst to Freemdict
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto hanshu-vst.epub freemdict:/Ancient-China-Books/漢書-豎排.epub
+          args: copyto hanshu-vst.epub freemdict:/古籍共享电子书计划/漢書-豎排.epub
