--- a/.github/workflows/make-epub.yml
+++ b/.github/workflows/make-epub.yml
@@ -44,17 +44,17 @@ jobs:
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
           args: copyto hanshu-vst.epub gdrive:/古籍共享电子书计划/漢書-豎排.epub
-      - name: Sync to Freemdict
+      - name: Sync to Onedrive
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto hanshu.epub freemdict:/古籍共享电子书计划/漢書.epub
-      - name: Sync vst to Freemdict
+          args: copyto hanshu.epub onedrive:/古籍共享电子书计划/漢書.epub
+      - name: Sync vst to Onedrive
         uses: wei/rclone@v1
         env:
          RCLONE_CONF: ${{ secrets.RCLONE_CONF }}
          RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
         with:
-          args: copyto hanshu-vst.epub freemdict:/古籍共享电子书计划/漢書-豎排.epub
+          args: copyto hanshu-vst.epub onedrive:/古籍共享电子书计划/漢書-豎排.epub
